fix: add missing home translations

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -157,5 +157,40 @@
   "detail.cta.copyHint": "انسخها والصقها في واتساب.",
   "toast.copy.success": "تم نسخ الرسالة",
   "toast.copy.error": "تعذر النسخ، جرّب يدويًا",
-  "footer.youtube": "يوتيوب {{brand}}"
+  "footer.youtube": "يوتيوب {{brand}}",
+  "home.hero.searchTitle": "??? ????",
+  "home.hero.search.transaction": "??? ???????",
+  "home.hero.search.area": "???????",
+  "home.hero.search.budget": "?????????",
+  "home.hero.search.cta": "???? ?????",
+  "home.callback.title": "???? ?????? ????",
+  "home.callback.subtitle": "???? ??????? ???????? ???? {{brand}} ??? ???? ?????.",
+  "home.callback.name": "????? ??????",
+  "home.callback.email": "?????? ??????????",
+  "home.callback.phone": "??? ??????",
+  "home.callback.submit": "??? ??????",
+  "home.search.city": "???????",
+  "home.search.area": "???? / ???????",
+  "home.search.purpose": "??? ?????",
+  "home.search.minPrice": "????? ??????",
+  "home.search.maxPrice": "????? ??????",
+  "home.search.submit": "???? ?????",
+  "home.request.title": "?????? ??? ???? ???",
+  "home.request.subtitle": "???? ???? ????? {{brand}} ???????? ??? ?????.",
+  "home.request.name": "????? ??????",
+  "home.request.phone": "??? ??????",
+  "home.request.intent": "?????",
+  "home.request.intent.buy": "????",
+  "home.request.intent.rent": "?????",
+  "home.request.intent.invest": "???????",
+  "home.request.area": "??????? ???????",
+  "home.request.budgetMin": "????????? ??????",
+  "home.request.budgetMax": "????????? ??????",
+  "home.request.contactTime": "??? ??????? ??????",
+  "home.request.contact.morning": "??????",
+  "home.request.contact.afternoon": "?????",
+  "home.request.contact.evening": "?????",
+  "home.request.contact.any": "?? ???",
+  "home.request.notes": "??????? ??????",
+  "home.request.submit": "????? ?????"
 }
