--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -157,5 +157,40 @@
   "admin.users.disable": "Disable",
   "admin.users.enable": "Enable",
   "admin.users.error.generic": "Unable to update user.",
-  "owner.users.invite.success": "Invite sent successfully."
+  "owner.users.invite.success": "Invite sent successfully.",
+  "home.hero.searchTitle": "Quick search",
+  "home.hero.search.transaction": "Transaction type",
+  "home.hero.search.area": "Area",
+  "home.hero.search.budget": "Budget",
+  "home.hero.search.cta": "Search now",
+  "home.callback.title": "Request a call back",
+  "home.callback.subtitle": "Leave your details and the {{brand}} team will contact you shortly.",
+  "home.callback.name": "Full name",
+  "home.callback.email": "Email",
+  "home.callback.phone": "Phone number",
+  "home.callback.submit": "Request call",
+  "home.search.city": "City",
+  "home.search.area": "District / Area",
+  "home.search.purpose": "Purpose",
+  "home.search.minPrice": "Min price",
+  "home.search.maxPrice": "Max price",
+  "home.search.submit": "Start search",
+  "home.request.title": "Tell us what you want",
+  "home.request.subtitle": "Send your request to {{brand}} and we will follow up quickly.",
+  "home.request.name": "Full name",
+  "home.request.phone": "Phone number",
+  "home.request.intent": "Intent",
+  "home.request.intent.buy": "Buy",
+  "home.request.intent.rent": "Rent",
+  "home.request.intent.invest": "Invest",
+  "home.request.area": "Preferred area",
+  "home.request.budgetMin": "Minimum budget",
+  "home.request.budgetMax": "Maximum budget",
+  "home.request.contactTime": "Preferred contact time",
+  "home.request.contact.morning": "Morning",
+  "home.request.contact.afternoon": "Afternoon",
+  "home.request.contact.evening": "Evening",
+  "home.request.contact.any": "Any time",
+  "home.request.notes": "Additional notes",
+  "home.request.submit": "Submit request"
 }
