fix: remove arabic placeholders and tighten i18n fallback

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -158,39 +158,39 @@
   "toast.copy.success": "تم نسخ الرسالة",
   "toast.copy.error": "تعذر النسخ، جرّب يدويًا",
   "footer.youtube": "يوتيوب {{brand}}",
-  "home.hero.searchTitle": "??? ????",
-  "home.hero.search.transaction": "??? ???????",
-  "home.hero.search.area": "???????",
-  "home.hero.search.budget": "?????????",
-  "home.hero.search.cta": "???? ?????",
-  "home.callback.title": "???? ?????? ????",
-  "home.callback.subtitle": "???? ??????? ???????? ???? {{brand}} ??? ???? ?????.",
-  "home.callback.name": "????? ??????",
-  "home.callback.email": "?????? ??????????",
-  "home.callback.phone": "??? ??????",
-  "home.callback.submit": "??? ??????",
-  "home.search.city": "???????",
-  "home.search.area": "???? / ???????",
-  "home.search.purpose": "??? ?????",
-  "home.search.minPrice": "????? ??????",
-  "home.search.maxPrice": "????? ??????",
-  "home.search.submit": "???? ?????",
-  "home.request.title": "?????? ??? ???? ???",
-  "home.request.subtitle": "???? ???? ????? {{brand}} ???????? ??? ?????.",
-  "home.request.name": "????? ??????",
-  "home.request.phone": "??? ??????",
-  "home.request.intent": "?????",
-  "home.request.intent.buy": "????",
-  "home.request.intent.rent": "?????",
-  "home.request.intent.invest": "???????",
-  "home.request.area": "??????? ???????",
-  "home.request.budgetMin": "????????? ??????",
-  "home.request.budgetMax": "????????? ??????",
-  "home.request.contactTime": "??? ??????? ??????",
-  "home.request.contact.morning": "??????",
-  "home.request.contact.afternoon": "?????",
-  "home.request.contact.evening": "?????",
-  "home.request.contact.any": "?? ???",
-  "home.request.notes": "??????? ??????",
-  "home.request.submit": "????? ?????"
+  "home.hero.searchTitle": "بحث سريع",
+  "home.hero.search.transaction": "نوع العملية",
+  "home.hero.search.area": "المنطقة",
+  "home.hero.search.budget": "الميزانية",
+  "home.hero.search.cta": "ابحث الآن",
+  "home.callback.title": "اطلب مكالمة الآن",
+  "home.callback.subtitle": "اترك بياناتك وسيتواصل فريق {{brand}} معك خلال دقائق.",
+  "home.callback.name": "الاسم الكامل",
+  "home.callback.email": "البريد الإلكتروني",
+  "home.callback.phone": "رقم الهاتف",
+  "home.callback.submit": "طلب مكالمة",
+  "home.search.city": "المدينة",
+  "home.search.area": "الحي / المنطقة",
+  "home.search.purpose": "نوع الغرض",
+  "home.search.minPrice": "السعر الأدنى",
+  "home.search.maxPrice": "السعر الأعلى",
+  "home.search.submit": "ابدأ البحث",
+  "home.request.title": "أخبرنا بما تبحث عنه",
+  "home.request.subtitle": "ارسل طلبك لفريق {{brand}} وسنتواصل معك بسرعة.",
+  "home.request.name": "الاسم الكامل",
+  "home.request.phone": "رقم الهاتف",
+  "home.request.intent": "الغرض",
+  "home.request.intent.buy": "شراء",
+  "home.request.intent.rent": "إيجار",
+  "home.request.intent.invest": "استثمار",
+  "home.request.area": "المنطقة المفضلة",
+  "home.request.budgetMin": "الميزانية الأدنى",
+  "home.request.budgetMax": "الميزانية الأعلى",
+  "home.request.contactTime": "وقت التواصل المفضل",
+  "home.request.contact.morning": "صباحًا",
+  "home.request.contact.afternoon": "ظهرًا",
+  "home.request.contact.evening": "مساءً",
+  "home.request.contact.any": "أي وقت",
+  "home.request.notes": "ملاحظات إضافية",
+  "home.request.submit": "إرسال الطلب"
 }
