--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -192,5 +192,94 @@
   "home.request.contact.evening": "Evening",
   "home.request.contact.any": "Any time",
   "home.request.notes": "Additional notes",
-  "home.request.submit": "Submit request"
+  "home.request.submit": "Submit request",
+  "nav.teamLogin": "Team Login 🔒",
+  "team.login.title": "Team Login",
+  "team.login.subtitle": "This portal is for team members and partners only.",
+  "team.login.errorNote": "This portal is restricted to invited accounts only.",
+  "team.notice.title": "Team & Partners Only",
+  "team.notice.subtitle": "Internal access only.",
+  "team.portal.title": "Team & Partners Portal",
+  "team.portal.subtitle": "Internal access for team and partners.",
+  "team.portal.stats.title": "Submission snapshot",
+  "team.portal.stats.subtitle": "Partner units and projects at a glance.",
+  "team.portal.stats.new": "New",
+  "team.portal.stats.review": "In review",
+  "team.portal.stats.approved": "Approved",
+  "team.portal.stats.rejected": "Needs changes",
+  "team.portal.shortcuts.title": "Quick links",
+  "team.portal.shortcuts.subtitle": "Jump to the internal sections.",
+  "team.portal.card.units.title": "Partner units",
+  "team.portal.card.units.subtitle": "Manage partner projects and unit submissions.",
+  "team.portal.card.units.cta": "Open units",
+  "team.portal.card.crm.title": "CRM inbox",
+  "team.portal.card.crm.subtitle": "Track customer requests and follow-ups.",
+  "team.portal.card.crm.cta": "Open CRM",
+  "team.portal.card.partners.title": "Partner orgs",
+  "team.portal.card.partners.subtitle": "Manage developer orgs and members.",
+  "team.portal.card.partners.cta": "Manage partners",
+  "team.portal.card.users.title": "Users & roles",
+  "team.portal.card.users.subtitle": "Invite team members and update roles.",
+  "team.portal.card.users.cta": "Manage users",
+  "team.portal.back": "Back to portal",
+  "team.units.title": "Partner submissions",
+  "team.units.subtitle": "Review partner projects and units.",
+  "team.units.projects.title": "Partner projects",
+  "team.units.projects.subtitle": "New and in-review projects.",
+  "team.units.projects.label": "Project",
+  "team.units.listings.title": "Partner units",
+  "team.units.listings.subtitle": "New and in-review units.",
+  "team.units.listings.label": "Unit",
+  "team.units.empty": "No submissions yet.",
+  "team.units.developer": "Developer: {{name}}",
+  "team.users.title": "Team users",
+  "team.users.subtitle": "Invite and manage internal access.",
+  "team.users.invite.title": "Invite a user",
+  "team.users.invite.subtitle": "Send an invite to a team member or partner.",
+  "team.users.list.title": "User list",
+  "team.users.list.subtitle": "Update roles or disable accounts.",
+  "team.partners.title": "Partner organizations",
+  "team.partners.subtitle": "Manage developers and partner members.",
+  "team.partners.create.title": "Add partners",
+  "team.partners.create.subtitle": "Create a partner org and link members.",
+  "team.partners.create.org": "Create organization",
+  "team.partners.create.name": "Organization name",
+  "team.partners.create.submit": "Save",
+  "team.partners.create.member": "Link member",
+  "team.partners.create.selectOrg": "Select organization",
+  "team.partners.create.userId": "User id",
+  "team.partners.create.role": "Member role (optional)",
+  "team.partners.list.title": "Organizations",
+  "team.partners.list.subtitle": "Developer orgs and their members.",
+  "team.partners.list.empty": "No partners yet.",
+  "team.partners.list.noMembers": "No members linked yet.",
+  "team.partners.list.role": "Role: {{role}}",
+  "home.supply.subtitle": "Developer supply is invite-only through the partner portal.",
+  "home.supply.developer.subtitle": "Partner supply is handled through the internal portal.",
+  "home.supply.developer.cta": "Open partner portal",
+  "supply.page.subtitle": "Developer supply is invite-only through the partner portal.",
+  "supply.card.developer.subtitle": "Partner supply is invite-only through the portal.",
+  "supply.card.developer.cta": "Team login",
+  "supply.card.developer.note": "Access requires an invite.",
+  "supply.developer.portal.title": "Developer partner portal",
+  "supply.developer.portal.subtitle": "Supply submissions are handled in the internal portal.",
+  "supply.developer.portal.note": "If you already have an invite, sign in. If not, request a callback.",
+  "supply.developer.portal.cta": "Open partner portal",
+  "supply.developer.portal.callback": "Request a callback",
+  "team.portal.card.cleanup.title": "Cleanup tool",
+  "team.portal.card.cleanup.subtitle": "Remove seeded settings from production.",
+  "team.portal.card.cleanup.cta": "Open cleanup",
+  "team.cleanup.title": "Settings cleanup",
+  "team.cleanup.subtitle": "Owner-only tool to remove seeded placeholders.",
+  "team.cleanup.body": "This clears seeded contact/trust values from site settings and keeps defaults NULL.",
+  "team.cleanup.button": "Run cleanup",
+  "team.cleanup.running": "Running cleanup...",
+  "team.cleanup.before": "Before",
+  "team.cleanup.after": "After",
+  "team.cleanup.present": "Present",
+  "team.cleanup.empty": "Empty",
+  "team.cleanup.success": "Cleanup completed.",
+  "team.cleanup.error.unauthorized": "Please sign in.",
+  "team.cleanup.error.forbidden": "Owner access only.",
+  "team.cleanup.error.generic": "Cleanup failed: {{message}}"
 }
