Team activation: email OTP verify + set password (invite-only)

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -197,6 +197,33 @@
   "team.login.title": "تسجيل دخول فريق العمل",
   "team.login.subtitle": "هذه البوابة مخصصة لفريق العمل والشركاء فقط.",
   "team.login.errorNote": "هذه البوابة مخصصة للحسابات المدعوة فقط.",
+  "team.activate.title": "تفعيل حساب الفريق",
+  "team.activate.subtitle": "أدخل بيانات الدعوة ثم تحقق من الكود لإنشاء كلمة المرور.",
+  "team.activate.email": "البريد الإلكتروني",
+  "team.activate.phone": "رقم الهاتف",
+  "team.activate.fullName": "الاسم الكامل (اختياري)",
+  "team.activate.send": "إرسال كود التحقق",
+  "team.activate.sending": "جارٍ الإرسال...",
+  "team.activate.codeHint": "سيصلك كود التحقق على البريد الإلكتروني.",
+  "team.activate.code": "كود التحقق",
+  "team.activate.verify": "تأكيد الكود",
+  "team.activate.verifying": "جارٍ التحقق...",
+  "team.activate.back": "تعديل البيانات",
+  "team.activate.password": "كلمة المرور",
+  "team.activate.passwordConfirm": "تأكيد كلمة المرور",
+  "team.activate.create": "إنشاء كلمة المرور",
+  "team.activate.creating": "جارٍ الإنشاء...",
+  "team.activate.link": "عندك دعوة؟ فعّل حسابك",
+  "team.activate.info.sent": "تم إرسال الكود إلى بريدك الإلكتروني.",
+  "team.activate.info.verified": "تم التحقق من الكود. أنشئ كلمة المرور الآن.",
+  "team.activate.info.done": "تم تفعيل الحساب بنجاح.",
+  "team.activate.error.notInvited": "غير مدعو.",
+  "team.activate.error.mismatch": "بيانات غير مطابقة للدعوة.",
+  "team.activate.error.invalid": "يرجى إدخال البيانات المطلوبة.",
+  "team.activate.error.send": "تعذر إرسال كود التحقق.",
+  "team.activate.error.verify": "كود التحقق غير صحيح.",
+  "team.activate.error.password": "تأكد من كلمة المرور وتطابقها.",
+  "team.activate.error.complete": "تعذر إكمال التفعيل.",
   "team.notice.title": "مخصص لفريق العمل والشركاء",
   "team.notice.subtitle": "للاستخدام الداخلي فقط.",
   "team.portal.title": "بوابة فريق العمل والشركاء",
