--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -197,6 +197,33 @@
   "team.login.title": "Team Login",
   "team.login.subtitle": "This portal is for team members and partners only.",
   "team.login.errorNote": "This portal is restricted to invited accounts only.",
+  "team.activate.title": "Activate Team Account",
+  "team.activate.subtitle": "Enter invite details, verify the code, then create your password.",
+  "team.activate.email": "Email",
+  "team.activate.phone": "Phone",
+  "team.activate.fullName": "Full name (optional)",
+  "team.activate.send": "Send verification code",
+  "team.activate.sending": "Sending...",
+  "team.activate.codeHint": "You will receive the verification code by email.",
+  "team.activate.code": "Verification code",
+  "team.activate.verify": "Verify code",
+  "team.activate.verifying": "Verifying...",
+  "team.activate.back": "Edit details",
+  "team.activate.password": "Password",
+  "team.activate.passwordConfirm": "Confirm password",
+  "team.activate.create": "Create password",
+  "team.activate.creating": "Creating...",
+  "team.activate.link": "Have an invite? Activate your account",
+  "team.activate.info.sent": "Verification code sent to your email.",
+  "team.activate.info.verified": "Code verified. Create your password now.",
+  "team.activate.info.done": "Account activated successfully.",
+  "team.activate.error.notInvited": "Not invited.",
+  "team.activate.error.mismatch": "Invite details do not match.",
+  "team.activate.error.invalid": "Please enter the required details.",
+  "team.activate.error.send": "Unable to send verification code.",
+  "team.activate.error.verify": "Invalid verification code.",
+  "team.activate.error.password": "Make sure passwords match.",
+  "team.activate.error.complete": "Unable to complete activation.",
   "team.notice.title": "Team & Partners Only",
   "team.notice.subtitle": "Internal access only.",
   "team.portal.title": "Team & Partners Portal",
