refactor: admin owner dashboard IA

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -308,5 +308,63 @@
   "team.cleanup.success": "تم التنظيف بنجاح.",
   "team.cleanup.error.unauthorized": "يرجى تسجيل الدخول أولاً.",
   "team.cleanup.error.forbidden": "هذه الأداة للمالك فقط.",
-  "team.cleanup.error.generic": "تعذر تنفيذ التنظيف: {{message}}"
+  "team.cleanup.error.generic": "تعذر تنفيذ التنظيف: {{message}}",
+  "lead.status.closed": "مغلق",
+  "lead.status.archived": "مؤرشف",
+  "lead.status.test": "تجريبي",
+  "admin.hub.title": "لوحة الإدارة",
+  "admin.hub.subtitle": "نظرة تشغيلية ووصول سريع.",
+  "admin.hub.crm.title": "طلبات العملاء",
+  "admin.hub.crm.subtitle": "العملاء، التعيين، والمتابعة.",
+  "admin.hub.crm.cta": "فتح طلبات العملاء",
+  "admin.hub.team.title": "فريق العمل",
+  "admin.hub.team.subtitle": "الدعوات والأدوار والصلاحيات.",
+  "admin.hub.team.cta": "إدارة الفريق",
+  "admin.hub.partners.title": "شركاء المطورين",
+  "admin.hub.partners.subtitle": "شركاء التوريد وربط الحسابات.",
+  "admin.hub.partners.cta": "إدارة الشركاء",
+  "admin.hub.marketing.title": "شركاء التسويق",
+  "admin.hub.marketing.subtitle": "شعارات الشركاء وترتيب ظهورهم.",
+  "admin.hub.marketing.cta": "إدارة التسويق",
+  "crm.requests.title": "طلبات العملاء",
+  "crm.requests.subtitle": "طلبات العملاء وخط سير المتابعة.",
+  "crm.requests.empty": "لا توجد طلبات بعد.",
+  "crm.request.label": "العميل / الطلب",
+  "crm.request.view": "عرض الطلب",
+  "crm.request.quickActions": "إجراءات سريعة",
+  "crm.request.markTest": "تعيين كتجريبي",
+  "crm.request.archive": "أرشفة",
+  "crm.request.close": "إغلاق",
+  "crm.request.assignee": "المسؤول",
+  "crm.request.assignee.empty": "غير مخصص",
+  "crm.request.history.title": "السجل",
+  "crm.request.notes.title": "الملاحظات",
+  "crm.request.meta.title": "بيانات الطلب",
+  "crm.request.timestamps.created": "تاريخ الإنشاء",
+  "crm.request.timestamps.updated": "آخر تحديث",
+  "crm.request.timestamps.next": "المتابعة القادمة",
+  "admin.partners.searchUser": "ابحث عن عضو الفريق",
+  "admin.partners.searchPlaceholder": "ابحث بالاسم أو البريد أو الهاتف",
+  "admin.partners.selectedUser": "العضو المختار",
+  "admin.partners.clearSelection": "مسح الاختيار",
+  "admin.users.copyId": "نسخ المعرف",
+  "admin.users.copyIdDone": "تم النسخ",
+  "owner.hub.title": "لوحة المالك",
+  "owner.hub.subtitle": "اختصارات لإدارة العمليات والفرق.",
+  "owner.hub.crm.title": "طلبات العملاء",
+  "owner.hub.crm.subtitle": "متابعة الطلبات وخط سير العملاء.",
+  "owner.hub.crm.cta": "فتح طلبات العملاء",
+  "owner.hub.team.title": "فريق العمل",
+  "owner.hub.team.subtitle": "إدارة المستخدمين والأدوار.",
+  "owner.hub.team.cta": "إدارة الفريق",
+  "owner.hub.partners.title": "شركاء المطورين",
+  "owner.hub.partners.subtitle": "إدارة المطورين وربط الحسابات.",
+  "owner.hub.partners.cta": "إدارة الشركاء",
+  "owner.delete.button": "حذف نهائي",
+  "owner.delete.confirm": "تأكيد الحذف",
+  "owner.delete.loading": "جارٍ الحذف...",
+  "owner.delete.confirmLabel": "تأكيد الحذف",
+  "owner.delete.confirmHint": "اكتب {{value}} للتأكيد.",
+  "owner.delete.cancel": "إلغاء",
+  "owner.delete.error": "تعذر الحذف."
 }
