--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -308,5 +308,63 @@
   "team.cleanup.success": "Cleanup completed.",
   "team.cleanup.error.unauthorized": "Please sign in.",
   "team.cleanup.error.forbidden": "Owner access only.",
-  "team.cleanup.error.generic": "Cleanup failed: {{message}}"
+  "team.cleanup.error.generic": "Cleanup failed: {{message}}",
+  "lead.status.closed": "Closed",
+  "lead.status.archived": "Archived",
+  "lead.status.test": "Test",
+  "admin.hub.title": "Admin dashboard",
+  "admin.hub.subtitle": "Operations overview and quick access.",
+  "admin.hub.crm.title": "CRM requests",
+  "admin.hub.crm.subtitle": "Leads, assignments, and follow-up.",
+  "admin.hub.crm.cta": "Open CRM requests",
+  "admin.hub.team.title": "Team users",
+  "admin.hub.team.subtitle": "Invites, roles, and access.",
+  "admin.hub.team.cta": "Manage team",
+  "admin.hub.partners.title": "Developer partners",
+  "admin.hub.partners.subtitle": "Supply partners and linked accounts.",
+  "admin.hub.partners.cta": "Manage partners",
+  "admin.hub.marketing.title": "Marketing partners",
+  "admin.hub.marketing.subtitle": "Public partner logos and ordering.",
+  "admin.hub.marketing.cta": "Manage marketing",
+  "crm.requests.title": "Requests",
+  "crm.requests.subtitle": "Customer requests and lead pipeline.",
+  "crm.requests.empty": "No requests yet.",
+  "crm.request.label": "Client / Request",
+  "crm.request.view": "View request",
+  "crm.request.quickActions": "Quick actions",
+  "crm.request.markTest": "Mark test",
+  "crm.request.archive": "Archive",
+  "crm.request.close": "Close",
+  "crm.request.assignee": "Owner",
+  "crm.request.assignee.empty": "Unassigned",
+  "crm.request.history.title": "History",
+  "crm.request.notes.title": "Notes",
+  "crm.request.meta.title": "Request info",
+  "crm.request.timestamps.created": "Created",
+  "crm.request.timestamps.updated": "Updated",
+  "crm.request.timestamps.next": "Next follow-up",
+  "admin.partners.searchUser": "Search team member",
+  "admin.partners.searchPlaceholder": "Search by name, email, or phone",
+  "admin.partners.selectedUser": "Selected user",
+  "admin.partners.clearSelection": "Clear",
+  "admin.users.copyId": "Copy UUID",
+  "admin.users.copyIdDone": "Copied",
+  "owner.hub.title": "Owner dashboard",
+  "owner.hub.subtitle": "Quick access to CRM, team, and partners.",
+  "owner.hub.crm.title": "CRM requests",
+  "owner.hub.crm.subtitle": "Monitor customer requests and pipeline.",
+  "owner.hub.crm.cta": "Open requests",
+  "owner.hub.team.title": "Team users",
+  "owner.hub.team.subtitle": "Users, roles, and access.",
+  "owner.hub.team.cta": "Manage team",
+  "owner.hub.partners.title": "Developer partners",
+  "owner.hub.partners.subtitle": "Developer orgs and linked accounts.",
+  "owner.hub.partners.cta": "Manage partners",
+  "owner.delete.button": "Delete",
+  "owner.delete.confirm": "Confirm delete",
+  "owner.delete.loading": "Deleting...",
+  "owner.delete.confirmLabel": "Confirmation",
+  "owner.delete.confirmHint": "Type {{value}} to confirm the deletion.",
+  "owner.delete.cancel": "Cancel",
+  "owner.delete.error": "Delete failed."
 }
